fix alignment of navbar-collapse and footer

--- a/style.css
+++ b/style.css
@@ -21,21 +21,20 @@ body {
 }
 
 footer {
+  padding-top: 1rem;
   box-shadow: 0px -5px 8px rgba(0, 0, 0, 25%);
 }
 
 .footer-col {
-  padding: 1rem;
+  padding: 0 1rem;
 }
 
 .footer-col ul {
   list-style: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
 .footer-col ul li a {
   font-size: 1rem;
   text-decoration: none;
+  color: var(--text-color);
 }
